added tax feature for grandtotal

--- a/food_online/templates/marketplace/cart.html
+++ b/food_online/templates/marketplace/cart.html
@@ -41,6 +41,7 @@
                                                         <label id="qty-{{item.fooditem.id}}">0</label>
                                                         <a href="#" class="add_to_cart" data-id="{{ item.fooditem.id }}" data-url="{% url 'add_to_cart' item.fooditem.id %}"><i class="icon-plus4 text-color"></i></a>
                                                         <a href="#" class="delete_cart" data-id="{{ item.id }}" data-url="{% url 'delete_cart' item.id %}"><i class="icon-delete text-color"></i></a>
+                                                        
                                                     </div>
                                                 </li>
                                                 {% endfor %}
@@ -83,7 +84,7 @@
                                             <li style="list-style-type: none;">
                                                 Subtotal
                                                 <span class="price float-right">
-                                                    <span class="currency">₹</span>
+                                                    <span class="currency">$</span>
                                                     <span id="subtotal">{{ subtotal }}</span>
                                                 </span>
                                             </li>
@@ -93,7 +94,7 @@
                                                     <li style="list-style-type: none;">
                                                         {{ key }} <small>({{ i }}%)</small>
                                                         <span class="price float-right">
-                                                            <span class="currency">₹</span>
+                                                            <span class="currency">$</span>
                                                             <span id="tax-{{ key }}">{{ j }}</span>
                                                         </span>
                                                     </li>
@@ -104,11 +105,12 @@
                                             <li style="list-style-type: none; font-weight: 600;">
                                                 TOTAL
                                                 <span class="price float-right">
-                                                    <span class="currency">₹</span>
-                                                    <span id="total">{{ subtotal }}</span>
+                                                    <span class="currency">$</span>
+                                                    <span id="total">{{ grand_total }}</span>
                                                 </span>
                                             </li>
 
+                                            <a href="#" class="btn btn-danger w-100 p-2 mt-3">PROCEED TO CHECKOUT</a>
                                         </ul>
                                     </div>
                                     
